--- a/front/app/globals.css
+++ b/front/app/globals.css
@@ -1,3 +1,11 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  background-color: #0c111c;
+  color: white;
+  font-family: "Roboto", sans-serif;
+  letter-spacing: 0.05em !important;
+}
